# yiheng

./: D:\yiheng\yiheng\data\node_chip.csv  README.md  ZLX_chain.ipynb  dataset.md  industry_chain.ipynb  集成电路产业链图谱20230308V1.21.csv
CNN/: ProductReview-RNN.ipynb
DeepLearn/: tf_basics.ipynb
Feature_Engineering/: 基于Embedding的向量召回.ipynb
HippoRAG/: quick_start.ipynb
LLM/: 3_langchain_9_usecases.ipynb  llm-api.ipynb  llm_registry.ipynb  wonderland.txt
LLM/crewai_test/: README.md  pyproject.toml
LLM/crewai_test/src/crewai_test/: crew.py  main.py
ML_stock/: my_gene.py  sh300.csv  ssq.xls  收益率及夏普率.xlsx
NN/: ProductReview-RNN.ipynb  lenet_train.py  tf_basics.ipynb
Spyder/: countryspider.py
chain_data/: ZLX_chain.ipynb  industry_chain.ipynb  ths_chain.ipynb  集成电路产业链图谱20230308V1.21.csv
data/: IC_node.xlsx
dos/: dos.md  mac_dos.md  window_dos.md
fastapi/: main.py
feiquan/: math.md
lightGBM/: lightgbm_model.txt  little_samples_models.ipynb
markdown/: md_gammar.md  practise.md
mysql/: date_format.md  date_format.sql  pivot.sql  useful_algrithm.md
network/: chess_masters_WCC.csv  network_compare.ipynb  oddball.ipynb
os/: 缓存清除.md
others/: fp-growth.ipynb  knn.ipynb  model_monitor.md  networks.ipynb  pyfpgrowth.ipynb
pandas/: 031 pandas处理时间序列.ipynb  pandas_useage.ipynb  pd_filter.md  pd_静态方法.md  python_mining.md
plotlib/: matplot.ipynb  plot.md
pyspark/: aggudf.ipynb  quick_start.ipynb
python_oop/: first_class.ipynb  first_class.md  first_class.py
tensorflow/: 1.1_tensorflow_basics.ipynb  2.1_linear_regression.html  Untitled.ipynb  (+3 more)
(+989 files in other folders)
